[workspace]
members = ["demo_vm", "demo_compiler", "demo_isa","demo_interpreter"]
resolver = "2"
package.authors = ["wind_mask"]
package.license = "MIT"
package.edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
[profile.bench]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false